# framework

application_control/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  readme.txt  servo.launch  servo.launch~
application_control/.svn/: all-wcprops  entries
application_control/.svn/text-base/: CMakeLists.txt.svn-base  package.xml.svn-base
application_control/diagnostics/.svn/: all-wcprops  entries
application_control/diagnostics/.svn/text-base/: diagnostics_main.yaml.svn-base  diagnostics_main_kinect.yaml.svn-base
application_control/halcon_external_procedures/: close_active_window.hdvp  find_area_pepper.hdvp
application_control/include/: ColdBootState.h  ColdBootState.h~  MoveToHomeState.h  MoveToHomeState.h~  MoveToHomeState_action.h~  ReadyState.h  ReadyState.h~  ScanPlantState.h  SimpleActionState.h  SimpleActionState.h~  State.h  State.h~  StateMachine.h~  TransitionParser.h  TransitionParser.h~  VisualServoState.h
application_control/include/.svn/: all-wcprops  entries
application_control/include/.svn/text-base/: ColdBootState.h.svn-base  Pepper_ColdBootState.h.svn-base  Pepper_CollisionCheckState.h.svn-base  Pepper_DetectFruitState.h.svn-base  Pepper_ErrorState.h.svn-base  Pepper_HomeSensorRigState.h.svn-base  Pepper_MoveArmIntoWorkspaceState.h.svn-base  Pepper_MoveArmOutOfWorkspaceState.h.svn-base  Pepper_MoveSensorsIntoWorkspaceState.h.svn-base  Pepper_MoveSensorsOutOfWorkspaceState.h.svn-base  Pepper_MoveToBasketState.h.svn-base  Pepper_MoveToFruitStartState.h.svn-base  Pepper_MoveToFruitState.h.svn-base  Pepper_MoveToHomeState.h.svn-base  Pepper_MoveToVisualServoStartState.h.svn-base  Pepper_MoveToWaypoint_1.h.svn-base  Pepper_MoveToWaypoint_2.h.svn-base  Pepper_MoveToWaypoint_3.h.svn-base  Pepper_ReadyState.h.svn-base  Pepper_SelectFruitState.h.svn-base  ReadyState.h.svn-base  fruitLocState.h.svn-base  motionPlanningState.h.svn-base  moveToFruitState.h.svn-base  moveToFruitStateSim.h.svn-base  moveToHomeState.h.svn-base  moveToHomeStateSim.h.svn-base  selectFruitState.h.svn-base  transportFruitState.h.svn-base
application_control/msg/: changeState.msg
application_control/msg/.svn/: all-wcprops  entries
application_control/msg/.svn/text-base/: Affordance.msg.svn-base  EndEffectorStatus.msg.svn-base  EntireAcquisitionSequenceStatus.msg.svn-base  Fruits.msg.svn-base  FwheelMove2Goal.msg.svn-base  GripperControlGUI.msg.svn-base  HomingError.msg.svn-base  ImageAcqStatus.msg.svn-base  ImageRegistrationStatus.msg.svn-base  ImageRequest.msg.svn-base  ImageVSRegistrationStatus.msg.svn-base  JointControlGUI.msg.svn-base  ManipulatorControlGUI.msg.svn-base  MultiSpectralSeqStatus.msg.svn-base  Multiple_Affordances.msg.svn-base  Multiple_Affordances_Internal.msg.svn-base  PantiltMove2Goal.msg.svn-base  RegistrationStatus.msg.svn-base  RipenessMeasurement.msg.svn-base  SingleFruit.msg.svn-base  State.msg.svn-base  Statistics.msg.svn-base  VSRegistrationStatus.msg.svn-base  combinedRegisteredData.msg.svn-base  combinedVSRegisteredData.msg.svn-base  cylinder.msg.svn-base  end_effector_command.msg.svn-base  environmentInfo.msg.svn-base  fruit_model.msg.svn-base  fruits_detected.msg.svn-base  jointStatus.msg.svn-base  joint_online_control.msg.svn-base  manipulatorState.msg.svn-base  manipulator_move2goal.msg.svn-base  manipulator_online_control.msg.svn-base  manipulator_target_and_obstacle.msg.svn-base  pepper_stems.msg.svn-base  sensed_images.msg.svn-base  servoing.msg.svn-base  sphere.msg.svn-base  (+3 more)
application_control/old_code/: MoveToHomeState.cpp  MoveToHomeState_actionstate.cpp  MoveToHomeState_actionstate.h
application_control/src/: ColdBootState.cpp  ColdBootState.cpp~  Main.cpp  Main.cpp~  MoveToHomeState.cpp  MoveToHomeState.cpp~  MoveToHomeState_action.cpp~  ReadyState.cpp  ReadyState.cpp~  ScanPlantState.cpp  SimpleActionState.cpp~  State.cpp~  StateMachine.cpp~  TransitionParser.cpp~  VisualServoState.cpp  servo_main_control_program.cpp~
application_control/src/.svn/: all-wcprops  entries
application_control/src/.svn/text-base/: ColdBootState.cpp.svn-base  Pepper_ColdBootState.cpp.svn-base  Pepper_CollisionCheckState.cpp.svn-base  Pepper_DetectFruitState.cpp.svn-base  Pepper_ErrorState.cpp.svn-base  Pepper_HomeSensorRigState.cpp.svn-base  Pepper_MoveToBasketState.cpp.svn-base  (+23 more)
application_control/srv/: PauseRequest.srv  request_camera_parameters.srv
application_control/transitions/: transitions.dot  transitions.yaml  transitions.yaml~
application_control/transitions/.svn/: all-wcprops  entries
image_acquisition/: CMakeLists.txt  CMakeLists.txt~  halcon_node.launch~  package.xml  package.xml~  pepper_servo_package.launch~  readme~
image_acquisition/camera_parameters/: calculate_camera_parameter_tis_camera.hdev  calibration_model_125.descr
image_acquisition/halcon_external_procedures/: close_frame_grabber.hdvp  display_grabbed_image.hdvp  grab_image_resized.hdvp  grab_rectified_image.hdvp  grab_rectified_image_640_480.hdvp  grab_rectified_image_640_480_COLORSPACE.hdvp  grab_rectified_image_640_480_GRAY.hdvp  initialize_camera_tis.hdvp  initialize_camera_tis_640_480.hdvp  read_camera_parameters.hdvp
image_acquisition/halcon_scripts/: cake_test.hdev  image_analysis.hdev  image_analysis_2.hdev
image_acquisition/include/: image_acquisition_node.h  image_acquisition_node.h~  my_hdevoperatorimpl.h~  my_thread_impl.h~  pepper_servo_node.h~  window_handling.h
image_acquisition/src/: hdev_engine.cpp~  image_acquisition_node.cpp  pepper_servo_node.cpp~  test_helper_node.cpp~
image_acquisition/srv/: request_image.srv  request_servo_velocity_vector.srv~
visual_servo_control/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  pepper_servo.launch~  readme  readme~
visual_servo_control/include/: hdev_engine.h~  pepper_servo.h~  visual_servo_control_node.h
visual_servo_control/old_code/: getVelocityVector_CalTab  simulateVelocityVectorCalculation
visual_servo_control/src/: cycle_node.cpp  cycle_node.cpp~  pepper_servo.cpp~  visual_servo_control_node.cpp
visual_servo_control/srv/: request_servo_velocity_vector.srv
(+32 files in other folders)
