<package>
  <name>application_control</name>
  <version>1.0.0</version>
  <description>Main control program, using a state machine.</description>

  <license>BSD</license>

  <maintainer email="mail@ruudbarth.nl">Ruud Barth</maintainer>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Message generation -->
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>control_msgs</run_depend>

</package>
