<?xml version="1.0"?>
<package>
  <name>image_acquisition</name>
  
  s<version>0.0.0</version>

  <description> This package provides nodes for acquiring images.</description>

  <maintainer email="mail@ruudbarth.nl">Ruud Barth</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>


 
 <build_depend>opencv2</build_depend>
 <build_depend>cv_bridge</build_depend>
 <build_depend>image_transport</build_depend>
 <run_depend>opencv2</run_depend>
 <run_depend>cv_bridge</run_depend>
 <run_depend>image_transport</run_depend>




  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>


</package>
